deleted uncessnary file. small fixes.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^7.0.0",
     "detox": "^20.27.6",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
