--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^7.0.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "detox": "^20.27.6",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
