--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^7.0.5",
     "@reduxjs/toolkit": "^2.3.0",
+    "bcryptjs": "^2.4.3",
     "detox": "^20.27.6",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -34,12 +35,15 @@
     "expo-web-browser": "~13.0.3",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
+    "firebase-functions": "^6.2.0",
+    "firebase-tools": "^13.29.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-screen": "^1.0.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
