--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "functions/testFunc.js"  ]
+, "functions/testFunc.js", "app/tempo/registerFirestore.js"  ]
 }
