--- a/firecloud/functions/package.json
+++ b/firecloud/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0"
   },
