--- a/firecloud/functions/package.json
+++ b/firecloud/functions/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "22"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "firebase-admin": "^13.0.2",
