--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^7.0.5",
     "@reduxjs/toolkit": "^2.3.0",
+    "@shopify/flash-list": "^1.7.2",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "detox": "^20.27.6",
