--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.2.0",
     "firebase-tools": "^13.29.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
