--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@shopify/flash-list": "^1.7.2",
     "@types/bcryptjs": "^2.4.6",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "detox": "^20.27.6",
     "expo": "~51.0.28",
@@ -54,6 +55,7 @@
     "react-redux": "^9.1.2",
     "recyclerlistview": "^4.2.1",
     "tslib": "^2.8.1",
+    "uuid": "^11.0.4",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
