--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-firebase/auth": "^21.6.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@shopify/flash-list": "^1.7.2",
+    "@stripe/stripe-react-native": "0.37.2",
     "@types/bcryptjs": "^2.4.6",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
