--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.731.1",
+    "@aws-sdk/s3-request-presigner": "^3.731.1",
     "@babel/preset-env": "^7.1.6",
     "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.2",
@@ -31,6 +33,7 @@
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
+    "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
@@ -56,6 +59,7 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "recyclerlistview": "^4.2.1",
+    "sharp": "^0.33.5",
     "tslib": "^2.8.1",
     "uuid": "^11.0.4",
     "zustand": "^5.0.1"
