--- a/firecloud/functions/package.json
+++ b/firecloud/functions/package.json
@@ -16,6 +16,7 @@
   "main": "lib/functions/src/index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0"
   },
