--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
@@ -61,7 +62,7 @@
     "recyclerlistview": "^4.2.1",
     "sharp": "^0.33.5",
     "tslib": "^2.8.1",
-    "uuid": "^11.0.4",
+    "uuid": "^11.0.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
