--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@shopify/flash-list": "^1.7.2",
     "@stripe/stripe-react-native": "0.37.2",
+    "@tanstack/react-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
