--- a/firecloud/firebase.json
+++ b/firecloud/firebase.json
@@ -18,7 +18,16 @@
         "npm --prefix functions run build",
         "npm --prefix \"$RESOURCE_DIR\" run lint",
         "npm --prefix \"$RESOURCE_DIR\" run build"
-      ]
+      ],
+      "emulators": {
+        "firestore": {
+          "host": "HOST",
+          "port": "PORT"
+        },
+        "functions": {
+          "port": 5001
+        }
+      }
     }
   ]
 }
