--- a/firecloud/functions/package.json
+++ b/firecloud/functions/package.json
@@ -15,10 +15,12 @@
   },
   "main": "lib/functions/src/index.js",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.738.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.2",
-    "firebase-functions": "^6.3.0"
+    "firebase-functions": "^6.3.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -27,6 +29,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "jest": "^29.7.0",
     "typescript": "^4.9.0"
   },
   "private": true
