--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "detox": "^20.27.6",
     "expo": "~51.0.28",
