firebase emulators are sorta working. registration/log in/ log out functional. working on registerSellers 403.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "functions/testFunc.js", "app/tempo/registerFirestore.js"  ]
+, "firebase/functions/testFunc.js", "app/tempo/registerFirestore.js"  ]
 }
