--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -18,15 +18,22 @@
         "npm --prefix functions run build",
         "npm --prefix \"$RESOURCE_DIR\" run lint",
         "npm --prefix \"$RESOURCE_DIR\" run build"
-      ],
-      "emulators": {
-        "firestore": {
-
-        },
-        "functions": {
-
-        }
-      }
+      ]
     }
-  ]
+  ],
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "auth": {
+      "port": 9099
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
+  }
 }
