--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "22"
   },
-  "main": "lib/functions/src/index.js",
+  "main": "lib/firebase/functions/src/index.js",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.738.0",
     "bcryptjs": "^2.4.3",
