--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ firecloud/awsS3Config.ts
 firecloud/functions/.runtimeconfig.json
 app/auth/firebaseConfig.ts
 firebase/functions/firebase-export-1738435519613wApIsM
+firebase/functions/firebase-export-1738576358261gbnhRu/firebase-export-metadata.json
+firebase/functions/firebase-export-1738576358261gbnhRu/auth_export/accounts.json
+firebase/functions/firebase-export-1738576358261gbnhRu/auth_export/config.json
+firebase/functions/firebase-export-1738576358261gbnhRu/firestore_export/firestore_export.overall_export_metadata
+firebase/functions/firebase-export-1738576358261gbnhRu/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
+firebase/functions/firebase-export-1738576358261gbnhRu/firestore_export/all_namespaces/all_kinds/output-0
+.gitignore
