--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ firebase/functions/firebase-export-1738576358261gbnhRu/firestore_export/firestor
 firebase/functions/firebase-export-1738576358261gbnhRu/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
 firebase/functions/firebase-export-1738576358261gbnhRu/firestore_export/all_namespaces/all_kinds/output-0
 .gitignore
+firebase/functions/firebase-export-17386544721448lm5Kv/firebase-export-metadata.json
+firebase/functions/firebase-export-17386544721448lm5Kv/auth_export/accounts.json
+firebase/functions/firebase-export-17386544721448lm5Kv/auth_export/config.json
+firebase/functions/firebase-export-17386544721448lm5Kv/firestore_export/firestore_export.overall_export_metadata
+firebase/functions/firebase-export-17386544721448lm5Kv/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
+firebase/functions/firebase-export-17386544721448lm5Kv/firestore_export/all_namespaces/all_kinds/output-0
