--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ firebase/functions/firebase-export-17386544721448lm5Kv/auth_export/config.json
 firebase/functions/firebase-export-17386544721448lm5Kv/firestore_export/firestore_export.overall_export_metadata
 firebase/functions/firebase-export-17386544721448lm5Kv/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
 firebase/functions/firebase-export-17386544721448lm5Kv/firestore_export/all_namespaces/all_kinds/output-0
+WhatToDo.txt
