--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native": "0.74.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screen": "^1.0.1",
