--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,4 @@ firecloud/functions/.runtimeconfig.json
 app/auth/firebaseConfig.ts
 .gitignore
 WhatToDo.txt
-firebase/functions/firebase-export-1738757470996xStQ3N/
-
+db/items.tsx
