--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@react-native-firebase/auth": "^21.6.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@shopify/flash-list": "^1.7.2",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@stripe/stripe-react-native": "0.37.2",
     "@tanstack/react-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
