--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -13,24 +13,26 @@
   "engines": {
     "node": "22"
   },
-  "main": "lib/firebase/functions/src/index.js",
+  "main": "lib/index.js",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.738.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.3.0",
-    "sharp": "^0.33.5"
+    "node": "^20.12.2",
+    "sharp": "^0.33.5",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
     "jest": "^29.7.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.5"
   },
   "private": true
 }
