--- a/firebase/functions/tsconfig.json
+++ b/firebase/functions/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "nodenext",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
+    "rootDir": "src",
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
@@ -15,5 +16,4 @@
   "include": [
     "src"
   ],
-  "extends": "expo/tsconfig.base"
 }
