--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ app/auth/firebaseConfig.ts
 WhatToDo.txt
 db/items.tsx
 firebase/functions/src/configs/firebaseConfig.ts
+firebase/functions/firebase-export-17400470302636PYIAn
