commented out "extends" since it's been causing compiling problems.

--- a/firebase/functions/tsconfig.json
+++ b/firebase/functions/tsconfig.json
@@ -10,11 +10,12 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": ["node_modules/@types"] 
   },
   "compileOnSave": true,
   "include": [
     "src"
   ],
-  "extends": "expo/tsconfig.base"
+  // "extends": "expo/tsconfig.base" // makes npm run build not work for some reasons
 }
