--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ WhatToDo.txt
 db/items.tsx
 firebase/functions/src/configs/firebaseConfig.ts
 firebase/functions/firebase-export-17400470302636PYIAn
+app/(tabs)/test.tsx
+assets/db/items.tsx
+firebase/functions/src/test.ts
