--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@stripe/stripe-react-native": "0.37.2",
     "@tanstack/react-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.16",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
@@ -53,6 +54,7 @@
     "firebase-functions": "^6.2.0",
     "firebase-tools": "^13.29.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
