--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@stripe/stripe-react-native": "0.37.2",
-    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query": "^5.68.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.16",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
-    "detox": "^20.27.6",
-    "expo": "~51.0.28",
+    "expo": "^52.0.38",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-document-picker": "~12.0.2",
@@ -55,9 +54,9 @@
     "firebase-tools": "^13.29.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "^0.78.0",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
@@ -68,23 +67,20 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
     "recyclerlistview": "^4.2.1",
     "sharp": "^0.33.5",
     "tslib": "^2.8.1",
-    "uuid": "^11.0.5",
-    "zustand": "^5.0.1"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@testing-library/react-native": "^12.9.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.10",
+    "jest": "^29.7.0",
+    "jest-expo": "^52.0.6",
+    "typescript": "^5.8.2"
   },
   "private": true
 }
