--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,8 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "node": "22.14.0"
     }
   },
   "submit": {
