--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
     "@reduxjs/toolkit": "^2.3.0",
-    "@shopify/flash-list": "^1.7.2",
+    "@shopify/flash-list": "1.7.3",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
-    "@stripe/stripe-react-native": "0.37.2",
+    "@stripe/stripe-react-native": "0.38.6",
     "@tanstack/react-query": "^5.68.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.16",
@@ -35,36 +35,36 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "expo": "^52.0.38",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-document-picker": "~12.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-image": "~1.13.0",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.14",
+    "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.11",
+    "expo-font": "~13.0.4",
+    "expo-image": "~2.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.18",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "firebase-tools": "^13.29.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-native": "^0.78.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "1.14.0",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screen": "^1.0.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.10",
     "recyclerlistview": "^4.2.1",
@@ -77,7 +77,7 @@
     "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.10",
+    "@types/react": "~18.3.12",
     "jest": "^29.7.0",
     "jest-expo": "^52.0.6",
     "typescript": "^5.8.2"
