--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,8 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "node": "22.14.0"
     },
     "preview": {
       "distribution": "internal"
