chore: enable auto-increment for development builds in eas.json

--- a/eas.json
+++ b/eas.json
@@ -5,6 +5,7 @@
   },
   "build": {
     "development": {
+      "autoIncrement": true,
       "developmentClient": true,
       "distribution": "internal",
       "node": "22.14.0"
