chore: update .gitignore to include new Firebase export files

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,14 @@ app/auth/firebaseConfig.ts
 WhatToDo.txt
 db/items.tsx
 firebase/functions/src/configs/firebaseConfig.ts
-firebase/functions/firebase-export-17400470302636PYIAn
 app/(tabs)/test.tsx
 assets/db/items.tsx
 firebase/functions/src/test.ts
 auth/firebaseConfig.ts
+firebase\functions\firebase-export-1742818357716VTqGs5
+firebase/functions/firebase-export-1742818357716VTqGs5/firebase-export-metadata.json
+firebase/functions/firebase-export-1742818357716VTqGs5/auth_export/accounts.json
+firebase/functions/firebase-export-1742818357716VTqGs5/auth_export/config.json
+firebase/functions/firebase-export-1742818357716VTqGs5/firestore_export/firestore_export.overall_export_metadata
+firebase/functions/firebase-export-1742818357716VTqGs5/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
+firebase/functions/firebase-export-1742818357716VTqGs5/firestore_export/all_namespaces/all_kinds/output-0
