--- a/package.json
+++ b/package.json
@@ -19,54 +19,54 @@
     "@aws-sdk/s3-request-presigner": "^3.731.1",
     "@babel/preset-env": "^7.1.6",
     "@babel/runtime": "^7.26.0",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
     "@reduxjs/toolkit": "^2.3.0",
-    "@shopify/flash-list": "1.7.3",
+    "@shopify/flash-list": "1.7.6",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
-    "@stripe/stripe-react-native": "0.38.6",
+    "@stripe/stripe-react-native": "0.45.0",
     "@tanstack/react-query": "^5.68.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.16",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
-    "expo": "^52.0.38",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.14",
-    "expo-document-picker": "~13.0.3",
-    "expo-file-system": "~18.0.11",
-    "expo-font": "~13.0.4",
-    "expo-image": "~2.0.6",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.18",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.9",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-document-picker": "~13.1.5",
+    "expo-file-system": "~18.1.10",
+    "expo-font": "~13.3.1",
+    "expo-image": "~2.1.7",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "firebase-tools": "^13.29.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screen": "^1.0.1",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "^0.20.0",
     "recyclerlistview": "^4.2.1",
     "sharp": "^0.33.5",
     "tslib": "^2.8.1",
@@ -77,10 +77,10 @@
     "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "jest": "^29.7.0",
-    "jest-expo": "^52.0.6",
-    "typescript": "^5.8.2"
+    "jest-expo": "~53.0.5",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
